--- a/Makefile.win
+++ b/Makefile.win
@@ -1,17 +1,18 @@
-# Project: PrjSentenciasControl
+# Project: Prj_Recursividad
 # Makefile created by Dev-C++ 5.11
 
-CPP      = g++.exe -D__DEBUG__
-CC       = gcc.exe -D__DEBUG__
+CPP      = g++.exe
+CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = EjemploSentenciaControl.o
-LINKOBJ  = EjemploSentenciaControl.o
-LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc -g3
+RES      = Prj_Recursividad_private.res
+OBJ      = EjemploRecursividad1.o $(RES)
+LINKOBJ  = EjemploRecursividad1.o $(RES)
+LIBS     = -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib" -L"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc -pg
 INCS     = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Program Files (x86)/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
-BIN      = PrjSentenciasControl.exe
-CXXFLAGS = $(CXXINCS) -g3
-CFLAGS   = $(INCS) -g3
+BIN      = Prj_Recursividad.exe
+CXXFLAGS = $(CXXINCS) -pg
+CFLAGS   = $(INCS) -pg
 RM       = rm.exe -f
 
 .PHONY: all all-before all-after clean clean-custom
@@ -24,5 +25,9 @@ clean: clean-custom
 $(BIN): $(OBJ)
 	$(CPP) $(LINKOBJ) -o $(BIN) $(LIBS)
 
-EjemploSentenciaControl.o: EjemploSentenciaControl.cpp
-	$(CPP) -c EjemploSentenciaControl.cpp -o EjemploSentenciaControl.o $(CXXFLAGS)
+EjemploRecursividad1.o: EjemploRecursividad1.cpp
+	$(CPP) -c EjemploRecursividad1.cpp -o EjemploRecursividad1.o $(CXXFLAGS)
+
+Prj_Recursividad_private.res: Prj_Recursividad_private.rc 
+	$(WINDRES) -i Prj_Recursividad_private.rc --input-format=rc -o Prj_Recursividad_private.res -O coff 
+
